config/webhook/ks-controller-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: ks-controller-manager
  namespace: kubesphere-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: ks-controller-manager
    tier: backend
