config/webhook/network.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: kubesphere-nsnp-validate
webhooks:
  - clientConfig:
      caBundle: <caBundle>
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-network-kubesphere-io-v1alpha1
    failurePolicy: Fail
    name: validate.nsnp.kubesphere.io
    rules:
      - apiGroups:
          - network.kubesphere.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespacenetworkpolicies
